# Stock-Portfolio-Suggestion-Engine

./: .gitignore  README.md  StockManager.py  app.py  pyproject.toml
.github/workflows/: ci.yml
