[project]
name = "Stock-Portfolio-Suggestion-Engine"
version = "0.1.0"
description = "Modernized Python repository"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
